--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "QR Reader",
+  "name": "Welcome to QR Reader",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "icons": [
+    {
+      "src": "/t2pneon.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    }
+  ]
 }
