--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "/t2pneon.png",
+      "src": "/neon.png",
       "type": "image/png",
       "sizes": "192x192"
     }
